finish compatibility for dark mode and light mode without cdn

--- a/src/expressjs/pages/home/index.html
+++ b/src/expressjs/pages/home/index.html
@@ -1,6 +1,6 @@
 <!-- Hello sneak peeker ;)-->
 <!doctype html>
-<html lang="en" class="scroll-smooth">
+<html lang="en" class="light scroll-smooth">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -9,9 +9,7 @@
 
 
     <title>Jake Lee | Resume</title>
-
     <script src="https://cdn.lordicon.com/bhenfmcm.js"></script>
-    <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://kit.fontawesome.com/85539b08a7.js" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/@codersrank/skills-chart@x.x.x/codersrank-skills-chart.min.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -40,7 +38,7 @@
           </div>
         </div>
         <div class="w-full sm:w-1/4 text-center">
-          <a class="blog-header-logo text-dark" href="#">Jake Lee</a>
+          <a class="blog-header-logo text-gray-900 dark:text-white text-dark" href="#">Jake Lee</a>
         </div>
         <div class="w-full sm:w-1/4 flex justify-end items-center">
         <a type="button" title="Opens an email window" id="Contact_Me" class="relative animate-bounce hover:animate-none
@@ -57,7 +55,7 @@
      bg-white/90 dark:bg-zinc-900 ring-1 r dark:ring-zinc-300/20 text-sm font-medium shadow-md">
      <nav class="px-3 nav d-flex justify-between">
         <div class="flex-1">
-          <a id="work-experience-link" class="font-sans block px-3 py-2 text-muted
+          <a id="work-experience-link" class="font-sans text-gray-900 dark:text-white block px-3 py-2 text-muted
            hover:text-blue-700 dark:hover:text-blue-200" href="#projects">Projects</a>
         </div>
         <div class="flex-1">
@@ -88,7 +86,7 @@
              hidden lg:block transform hover:rotate-180 transition duration-500 ease-in-out" src="assets/images/about.jpg" alt="Bordered avatar">
           </div>
         </div>
-        <hr class="my-2 sm:my-0 border-gray-200 sm:mx-auto dark:border-gray-700 lg:my-8 opacity-50" />
+        <hr class="my-2 sm:my-2 border-gray-200 sm:mx-auto dark:border-gray-700 lg:my-8 opacity-50" />
 
         <!-- Skills section -->
 <section class="bg-white dark:bg-zinc-900">
@@ -201,7 +199,7 @@
       <section class="bg-white dark:bg-zinc-900">
         <div class="grid max-w-screen-xl px-4 py-8 mx-auto lg:gap-8 xl:gap-0 lg:py-16 lg:grid-cols-12">
             <div class="mr-auto place-self-center lg:col-span-7">
-            <h2 id="type" class="reveal max-w-2xl mb-6 text-4xl font-extrabold tracking-tight leading-none md:text-4xl xl:text-5xl dark:text-white"></h2>
+            <h2 id="type" class="reveal text-gray-900 dark:text-white text-center md:text-left max-w-2xl mb-6 text-4xl font-extrabold tracking-tight leading-none md:text-4xl xl:text-5xl dark:text-white"></h2>
             </div>
             <div class="lg:mt-0 lg:col-span-5 lg:flex">
               <codersrank-skills-chart class="reveal m-2 mt-2"
@@ -221,7 +219,7 @@
             stroke="35"
             style="width:40px;height:40px">
         </lord-icon>
-        <span class="reveal select-none text-lg font-medium dark:text-white">Work Experience</span>
+        <span class="reveal select-none text-lg font-medium text-gray-900 dark:text-white">Work Experience</span>
       </div>
       <div class="select-none flex items-center mb-2">
       </div>
@@ -232,7 +230,7 @@
                 <div class="reveal absolute w-3 h-3 bg-gray-200 rounded-full mt-5 -left-1.5 border border-white dark:border-gray-900 dark:bg-gray-700"></div>
                 <div class="flex flex-wrap">
                   <img id="reveal dark_mode_aws" class="w-10 h-10 my-2 mb-2 rounded-full shadow-md border border-white p-1" src="assets/svgs/dark_aws.svg" alt="Dark mode AWS Icon">
-                  <div class="reveal text-md flex items-center ml-3 mt-1 mb-2">Amazon Web Services</div>
+                  <div class="reveal text-gray-900 dark:text-white text-md flex items-center ml-3 mt-1 mb-2">Amazon Web Services</div>
                 </div>
                 <time class="reveal mb-1 text-sm font-normal leading-none text-gray-400 dark:text-gray-500">Jan 2023 - present</time>
                 <h3 class="reveal text-xl font-semibold text-gray-900 dark:text-white">DCO Shift Team Lead</h3>
@@ -259,7 +257,7 @@
                 <div class="absolute w-3 h-3 bg-gray-200 rounded-full mt-2 -left-1.5 border border-white dark:border-gray-900 dark:bg-gray-700"></div>
                 <div class="flex flex-wrap">
                   <img id="qq logo" class="reveal w-10 h-10 mb-4 rounded-full shadow-md border border-white p-1" src="assets/svgs/QQ.L.svg" alt="qq logo">
-                  <div class="reveal text-md flex items-center ml-3 mt-1 mb-6">QinetiQ</div>
+                  <div class="reveal text-gray-900 dark:text-white text-md flex items-center ml-3 mt-1 mb-6">QinetiQ</div>
                 </div>
                 <time class="reveal mb-1 text-sm font-normal leading-none text-gray-400 dark:text-gray-500">Aug 2019 - Nov 2020 · 1 yr 4 mos</time>
                 <h3 class="reveal text-xl font-semibold text-gray-900 dark:text-white">Shift Service Desk Agent</h3>
@@ -368,7 +366,7 @@
   <div>
       <div class="mx-auto flex items-center mb-6 space-x-4">
           <img class="w-10 h-10 mr-2" src="assets/svgs/portfolio-svgrepo-com.svg" alt="">
-          <div class="space-y-1 font-medium dark:text-white">
+          <div class="space-y-1 font-medium text-gray-900 dark:text-white">
               <p>Resume Website</p>
           </div>
       </div>
@@ -576,7 +574,6 @@
   </ul>
 </div>
 </article>
-
 
 <div id="bottom-banner" tabindex="-1" class="fixed bottom-0 left-0 z-50 flex justify-between w-full p-4 border-t border-gray-200 bg-gray-50 dark:bg-zinc-900 dark:border-gray-600">
   <div class="flex items-center mx-auto">
