--- a/src/expressjs/pages/home/index.html
+++ b/src/expressjs/pages/home/index.html
@@ -1,6 +1,6 @@
 <!-- Hello sneak peeker ;)-->
 <!doctype html>
-<html lang="en" class="light scroll-smooth">
+<html lang="en" class="dark scroll-smooth">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -41,6 +41,10 @@
           <a class="blog-header-logo text-gray-900 dark:text-white text-dark" href="#">Jake Lee</a>
         </div>
         <div class="w-full sm:w-1/4 flex justify-end items-center">
+          <button id="theme-toggle" type="button" class="mx-4 text-gray-500 dark:text-gray-400 hover:bg-gray-100 dark:hover:bg-gray-700 focus:outline-none focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 rounded-lg text-sm p-2.5">
+            <svg id="theme-toggle-dark-icon" class="hidden mr-4 w-7 h-7" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path d="M17.293 13.293A8 8 0 016.707 2.707a8.001 8.001 0 1010.586 10.586z"></path></svg>
+            <svg id="theme-toggle-light-icon" class="hidden mr-4 w-7 h-7" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path d="M10 2a1 1 0 011 1v1a1 1 0 11-2 0V3a1 1 0 011-1zm4 8a4 4 0 11-8 0 4 4 0 018 0zm-.464 4.95l.707.707a1 1 0 001.414-1.414l-.707-.707a1 1 0 00-1.414 1.414zm2.12-10.607a1 1 0 010 1.414l-.706.707a1 1 0 11-1.414-1.414l.707-.707a1 1 0 011.414 0zM17 11a1 1 0 100-2h-1a1 1 0 100 2h1zm-7 4a1 1 0 011 1v1a1 1 0 11-2 0v-1a1 1 0 011-1zM5.05 6.464A1 1 0 106.465 5.05l-.708-.707a1 1 0 00-1.414 1.414l.707.707zm1.414 8.486l-.707.707a1 1 0 01-1.414-1.414l.707-.707a1 1 0 011.414 1.414zM4 11a1 1 0 100-2H3a1 1 0 000 2h1z" fill-rule="evenodd" clip-rule="evenodd"></path></svg>
+        </button>
         <a type="button" title="Opens an email window" id="Contact_Me" class="relative animate-bounce hover:animate-none
          text-gray-900 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4
           focus:ring-gray-200 font-medium rounded-lg text-sm px-4 py-2  dark:bg-gray-800 dark:text-white
@@ -52,17 +56,17 @@
 
     <!-- Nav bar -->
     <div id="navbar" class="py-1 nav-scroller mb-3 mt-1 ml-5 justify-start text-left rounded-full
-     bg-white/90 dark:bg-zinc-900 ring-1 r dark:ring-zinc-300/20 text-sm font-medium shadow-md">
+     bg-white/90 ring-zinc-900/5 dark:bg-zinc-900 ring-1 r dark:ring-zinc-300/20 text-sm font-medium shadow-md">
      <nav class="px-3 nav d-flex justify-between">
         <div class="flex-1">
           <a id="work-experience-link" class="font-sans text-gray-900 dark:text-white block px-3 py-2 text-muted
            hover:text-blue-700 dark:hover:text-blue-200" href="#projects">Projects</a>
         </div>
         <div class="flex-1">
-          <a id="projects-link" class="font-sans block px-3 py-2 text-muted hover:text-blue-700 dark:hover:text-blue-200" href="#work_experience">Work</a>
+          <a id="projects-link" class="font-sans block px-3 py-2 text-muted text-gray-900 dark:text-white hover:text-blue-700 dark:hover:text-blue-200" href="#work_experience">Work</a>
         </div>
         <div class="flex-1">
-          <a id="recognition-link" class="font-sans block px-3 py-2 text-muted hover:text-blue-700 dark:hover:text-blue-200" href="#">Gadgets</a>
+          <a id="recognition-link" class="font-sans block px-3 py-2 text-muted text-gray-900 dark:text-white hover:text-blue-700 dark:hover:text-blue-200" href="#">Gadgets</a>
         </div>
       </nav>
     </div>
@@ -455,7 +459,7 @@
   <div>
       <div class="mx-auto flex items-center mb-6 space-x-4">
           <img class="w-12 h-12 rounded-full" src="assets/svgs/dolphin-svgrepo-com.svg" alt="">
-          <div class="space-y-1 font-medium dark:text-white">
+          <div class="space-y-1 font-medium text-gray-900 dark:text-white">
               <p>Streamline</p>
           </div>
       </div>
