--- a/src/expressjs/pages/home/index.html
+++ b/src/expressjs/pages/home/index.html
@@ -15,7 +15,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&display=swap" rel="stylesheet">
-    <link href="tailwind.css" rel="stylesheet">
+    <link href="css/tailwind.css" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
   </head>
@@ -56,7 +56,7 @@
 
     <!-- Nav bar -->
     <div id="navbar" class="py-1 nav-scroller mb-3 mt-1 ml-5 justify-start text-left rounded-full
-     bg-white/90 ring-zinc-900/5 dark:bg-zinc-900 ring-1 r dark:ring-zinc-300/20 text-sm font-medium shadow-md">
+     bg-white/90 ring-zinc-900/5 dark:bg-zinc-900 ring-1 r dark:ring-zinc-300/20 text-sm font-medium shadow-md not-fixed">
      <nav class="px-3 nav d-flex justify-between">
         <div class="flex-1">
           <a id="work-experience-link" class="font-sans text-gray-900 dark:text-white block px-3 py-2 text-muted
@@ -231,7 +231,7 @@
         <div class="flex flex-row justify-items-center select-none">
           <ol class="reveal h-flex-none max-w-full relative border-l border-gray-200 dark:border-gray-700 ml-4">
             <li class="mb-10 ml-4">
-                <div class="reveal absolute w-3 h-3 bg-gray-200 rounded-full mt-5 -left-1.5 border border-white dark:border-gray-900 dark:bg-gray-700"></div>
+              <div class="absolute w-3 h-3 bg-gray-200 rounded-full mt-5 -left-1.5 border border-white dark:border-gray-900 dark:bg-gray-700"></div>
                 <div class="flex flex-wrap">
                   <img id="reveal dark_mode_aws" class="w-10 h-10 my-2 mb-2 rounded-full shadow-md border border-white p-1" src="assets/svgs/dark_aws.svg" alt="Dark mode AWS Icon">
                   <div class="reveal text-gray-900 dark:text-white text-md flex items-center ml-3 mt-1 mb-2">Amazon Web Services</div>
