change tech stack for resume site preview

--- a/src/expressjs/pages/home/index.html
+++ b/src/expressjs/pages/home/index.html
@@ -325,11 +325,11 @@
           This website is my personal resume website, it was built using React, styled with Tailwind CSS with NodeJS as its runtime environment.
         </p>
         <div class="flex w-full flex-items-center justify-center">
-          <img class="h-10 w-10 inline-block mr-2 p-1 rounded-full" src="assets/svgs/express-svgrepo-com.svg" alt="ExpressJS" style="background-color: white;">
-          <img class="h-10 w-10 inline-block mr-2 rounded-full" src="assets/svgs/node-js-svgrepo-com.svg" alt="NodeJS">
-          <img class="h-10 w-10 inline-block mr-2 rounded-full" src="assets/svgs/icons8-mongodb.svg" alt="MongoDB">
-          <img class="h-10 w-10 inline-block mr-2 rounded-full" src="assets/svgs/react-javascript-js-framework-facebook-svgrepo-com.svg" alt="React">
-          <img class="h-10 w-10 inline-block mr-2 rounded-full" src="assets/svgs/tailwind-css-icon.svg" alt="Tailwind">
+            <img class="w-8 h-8 mr-5 inline-block p-1 rounded-full opacity-0" src="assets/svgs/express-svgrepo-com.svg" alt="ExpressJS" style="background-color: white;">
+            <img class="w-8 h-8 mr-5 inline-block rounded-full opacity-0" src="assets/svgs/node-js-svgrepo-com.svg" alt="NodeJS">
+            <img class="w-8 h-8 mr-5 inline-block rounded-full opacity-0" src="assets/svgs/tailwind-css-icon.svg" alt="Tailwind">
+            <img class="w-8 h-8 mr-5 inline-block rounded-full opacity-0" src="assets/svgs/firebase-icon.svg" alt="Firebase">
+            <img class="w-8 h-8 inline-block rounded-full opacity-0" src="assets/svgs/icons8-mongodb.svg" alt="Mongo">
         </div>
         <a href="#resume_section" type="button" class="text-white animate-pulse hover:animate-none bg-gradient-to-r
          from-blue-500 via-blue-600 to-blue-700 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-blue-300
