--- a/src/expressjs/pages/home/index.html
+++ b/src/expressjs/pages/home/index.html
@@ -86,7 +86,7 @@
             </p>
           </div>
           <div class="flex-none mt-4 md:mt-0 ml-0 md:ml-16 mb-2">
-            <img id="handsome" class="mr-10 w-36 h-36 p-1 rounded-full ring-2 ring-gray-300 dark:ring-gray-500
+            <img fetchpriority="high" id="handsome" class="mr-10 w-36 h-36 p-1 rounded-full ring-2 ring-gray-300 dark:ring-gray-500
              hidden lg:block transform hover:rotate-180 transition duration-500 ease-in-out" src="assets/images/about.jpg" alt="Bordered avatar">
           </div>
         </div>
@@ -307,9 +307,9 @@
             <img class="w-8 h-8 mr-5 inline-block" src="assets/svgs/aws-icon-services.svg" alt="AWS" title="AWS">
             <img class="w-8 h-8 mr-1.5 inline-block p-1 rounded-full" src="assets/svgs/terraform-icon-svgrepo-com.svg" alt="Terraform" title="Terraform" style="background-color: white;">
           </div>
-          <a type="button" href="#streamline" class="text-white animate-pulse bg-gradient-to-r from-blue-500 via-blue-600
-          to-blue-700 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-blue-300 dark:focus:ring-blue-800 shadow-lg
-          shadow-blue-500/50 dark:shadow-lg dark:shadow-blue-800/80 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2">
+          <a type="button" href="#streamline" class="text-white animate-pulse hover:animate-none bg-gradient-to-r
+          from-blue-500 via-blue-600 to-blue-700 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-blue-300
+           dark:focus:ring-blue-800 shadow-lg shadow-blue-500/50 dark:shadow-lg dark:shadow-blue-800/80 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2">
               Read more
         </a>
       </div>
@@ -358,9 +358,9 @@
         <div class="flex w-full flex-items-center justify-center min-h-3">
           <img class="h-10 w-10 inline-block mr-2" src="assets/svgs/icons8-python.svg" alt="Python"> <!-- Move the img tag here -->
         </div>
-        <button type="button" class="text-white animate-pulse bg-gradient-to-r from-blue-500 via-blue-600 to-blue-700
-         hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-blue-300 dark:focus:ring-blue-800 shadow-lg
-          shadow-blue-500/50 dark:shadow-lg dark:shadow-blue-800/80 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2 " onclick="goToPage()">
+        <button type="button" class="text-white animate-pulse hover:animate-none bg-gradient-to-r
+        from-blue-500 via-blue-600 to-blue-700 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-blue-300
+         dark:focus:ring-blue-800 shadow-lg shadow-blue-500/50 dark:shadow-lg dark:shadow-blue-800/80 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2" onclick="goToPage()">
           Read more
         </button>
         </a>
@@ -634,7 +634,7 @@
   </div>
 </footer>
   <!-- Placed at the end of the document so the pages load faster -->
-  <script src="dark_mode.js"></script>
+  <script rel="preload" src="dark_mode.js"></script>
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script>window.jQuery || document.write('<script src="../../../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
   <script defer src="index.js"></script>
