add link for downloading resume

--- a/src/expressjs/pages/home/index.html
+++ b/src/expressjs/pages/home/index.html
@@ -266,7 +266,7 @@
                 <time class="reveal mb-1 text-sm font-normal leading-none text-gray-400 dark:text-gray-500">Aug 2019 - Nov 2020 · 1 yr 4 mos</time>
                 <h3 class="reveal text-xl font-semibold text-gray-900 dark:text-white">Shift Service Desk Agent</h3>
                 <p class="mb-2 text-xs font-normal text-gray-500 dark:text-gray-400">
-                <a href="assets/cv.pdf" class="reveal inline-flex items-center px-4 mt-6 py-2 text-sm font-medium text-gray-900
+                <a href="assets/resume/Jake Lee Resume.docx" class="reveal inline-flex items-center px-4 mt-6 py-2 text-sm font-medium text-gray-900
                  bg-white border border-gray-200 rounded-lg hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4
                   focus:outline-none focus:ring-gray-200 focus:text-blue-700 dark:bg-gray-800 shadow-md dark:text-gray-400
                    dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700 dark:focus:ring-gray-700">Download CV
