--- a/src/expressjs/pages/home/index.html
+++ b/src/expressjs/pages/home/index.html
@@ -81,7 +81,7 @@
             <p class="mt-6 text-base text-zinc-600 dark:text-zinc-400 max-w-4xl sm:mb-4 sm:mx-auto mx-auto">
               Welcome to my personal website! On this site, you will learn a little about my professional life, including what I do for work,
               some of the things I have built in my spare time, and some of my interests. I enjoy cycling when I'm out of the house and am also
-              a rugby fan. I'm always looking for something new to build, so if you have any ideas, feel free to reach out to me via email by pressing the 'Contact Me' button.
+              a rugby fan. I'm always looking for something new to build, so if you have any ideas; <a href="#contact" class="underline">feel free to reach out to me.</a>
             </p>
           </div>
           <div class="flex-none mt-4 md:mt-0 ml-0 md:ml-16 mb-2">
@@ -324,7 +324,7 @@
           Resume Website
         </h3>
         <p class="text-lg font-normal text-gray-500 dark:text-gray-400">
-          This website is my personal resume website, it was built using React, styled with Tailwind CSS with NodeJS as its runtime environment.
+          This website is my personal resume website, it was built using vanilla Javascript, styled with Tailwind CSS, and with NodeJS as its runtime environment.
         </p>
         <div class="flex w-full flex-items-center justify-center">
             <img class="w-8 h-8 mr-5 inline-block p-1 rounded-full" src="assets/svgs/express-svgrepo-com.svg" alt="ExpressJS" style="background-color: white;">
@@ -396,7 +396,7 @@
           </a>
             <span
           class="ml-2 bg-gray-100 text-gray-900 text-xs shadow-md font-medium inline-flex items-center px-2.5 py-0.5 rounded dark:bg-gray-700 dark:text-gray-300">
-          v1.0.0
+          v1.0.1
         </span>
           </li>
           <li class="flex items-center" id="tech-logos">
@@ -582,13 +582,13 @@
 </article>
 <hr class="my-2 sm:my-2 border-gray-200 sm:mx-auto dark:border-gray-700 lg:my-8 opacity-50" />
 <div>
-      <h1 class="mt-4 text-2xl text-black font-bold dark:text-white">Contact</h1>
-      <p class="mt-4 text-black dark:text-white">Feel free to reach out to me! I check Discord most often, but any contact
+      <h1 class="mt-4 text-3xl text-black font-bold dark:text-white">Contact</h1>
+      <p class="mt-4 text-black dark:text-white">Feel free to reach out to me! I check email and linkedin most often, but any contact
       method below works.
   </p>
 
   <div id="contact" class="grid grid-cols-1 mt-12 text-center text-zinc-900 dark:text-white sm:mt-16 gap-x-20 gap-y-12 sm:grid-cols-2 lg:grid-cols-2 justify-center">
-    <a href="#" class="flex items-center ml-2 max-w-xl p-6  border border-gray-200 rounded-lg shadow  dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700 hover:scale-105 transform ease-in-out duration-300">
+    <a href="mailto:jakeoliverlee@gmail.com" class="flex items-center ml-2 max-w-xl p-6  border border-gray-200 rounded-lg shadow-md  dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700 hover:scale-105 transform ease-in-out duration-300">
       <div class="flex items-center justify-center w-full m-4">
         <svg xmlns="http://www.w3.org/2000/svg" class="toggleIconDark hidden mr-2 h-7 w-7 text-white fill-current" viewBox="0 0 64 64" id="email">
           <path fill="#fff" d="M53.42 53.32H10.58a8.51 8.51 0 0 1-8.5-8.5V19.18a8.51 8.51 0 0 1 8.5-8.5h42.84a8.51 8.51 0 0 1 8.5 8.5v25.64a8.51 8.51 0 0 1-8.5 8.5ZM10.58 13.68a5.5 5.5 0 0 0-5.5 5.5v25.64a5.5 5.5 0 0 0 5.5 5.5h42.84a5.5 5.5 0 0 0 5.5-5.5V19.18a5.5 5.5 0 0 0-5.5-5.5Z"></path>
@@ -600,7 +600,7 @@
       </div>
     </a>
 
-    <a href="#" class="flex items-center ml-2 max-w-xl p-6 border border-gray-200 rounded-lg shadow  dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700 hover:scale-105 transform ease-in-out duration-300">
+    <a href="https://github.com/jakeoliverlee" target="_blank" class="flex items-center ml-2 max-w-xl p-6 border border-gray-200 rounded-lg shadow-md  dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700 hover:scale-105 transform ease-in-out duration-300">
       <div class="flex items-center justify-center w-full m-4">
         <svg class="mr-2 h-7 w-7" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true"><path fill-rule="evenodd" d="M12 2C6.477 2 2 6.484
           2 12.017c0 4.425 2.865 8.18 6.839 9.504.5.092.682-.217.682-.483 0-.237-.008-.868-.013-1.703-2.782.605-3.369-1.343-3.369-1.343-.454-1.158-1.11-1.466-1.11-1.466-.908-.62.069-.608.069-.608
@@ -611,16 +611,16 @@
         <span class="text-zinc-900 dark:text-white select-none font-bold">@jakeoliverlee</span>
       </div>
     </a>
-    <a href="#" class="flex items-center ml-2 max-w-xl p-6 bg-yellow-200 border border-gray-200 rounded-lg shadow  dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700 hover:scale-105 transform ease-in-out duration-300">
+    <a href="https://www.linkedin.com/in/jake-lee-4aa088129/" target="_blank" class="flex items-center ml-2 max-w-xl p-6  border border-gray-200 rounded-lg shadow-md  dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700 hover:scale-105 transform ease-in-out duration-300">
       <div class="flex items-center justify-center w-full m-4">
         <svg xmlns="http://www.w3.org/2000/svg" class="toggleIconLight hidden mr-2 h-7 w-7" viewBox="0 0 24 24"><path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"/></svg>
-        <svg xmlns="http://www.w3.org/2000/svg" class="toggleIconDark hidden mr-2 h-7 w-7" viewBox="0 0 24 24">
-          <path fill="#fff" d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"/>
+        <svg xmlns="http://www.w3.org/2000/svg" class="toggleIconDark hidden mr-2 h-7 w-7" viewBox="0 0 24 24" fill="#586069">
+          <path fill="#586069" d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"/>
         </svg>
         <span class="text-zinc-900 dark:text-white select-none font-bold">Connect with me!</span>
       </div>
     </a>
-    <a href="#" class="flex items-center ml-2 max-w-xl p-6 bg-yellow-200 border border-gray-200 rounded-lg shadow  dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700 hover:scale-105 transform ease-in-out duration-300">
+    <a href="#" class="flex items-center ml-2 max-w-xl p-6 border border-gray-200 rounded-lg shadow-md  dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700 hover:scale-105 transform ease-in-out duration-300">
       <div class="flex items-center justify-center w-full m-4">
         <svg id="themeToggleDarkEmailIcon" xmlns="http://www.w3.org/2000/svg" class="hidden mr-2 h-7 w-7 text-white fill-current" viewBox="0 0 64 64" id="email">
           <path fill="#fff" d="M53.42 53.32H10.58a8.51 8.51 0 0 1-8.5-8.5V19.18a8.51 8.51 0 0 1 8.5-8.5h42.84a8.51 8.51 0 0 1 8.5 8.5v25.64a8.51 8.51 0 0 1-8.5 8.5ZM10.58 13.68a5.5 5.5 0 0 0-5.5 5.5v25.64a5.5 5.5 0 0 0 5.5 5.5h42.84a5.5 5.5 0 0 0 5.5-5.5V19.18a5.5 5.5 0 0 0-5.5-5.5Z"></path>
@@ -638,7 +638,7 @@
     <div class="flex items-center mx-auto">
         <p class="flex items-center text-sm font-normal text-gray-500 dark:text-gray-400">
             <span>This website is entirely open source |<a href="https://github.com/jakeoliverlee/resume"
-               target="_blank" rel="noopener noreferrer" class="flex items-center ml-0 text-sm font-medium
+               target="_blank" rel="noopener noreferrer" class="mb-2 flex items-center ml-0 text-sm font-medium
                 text-blue-600 md:ml-1 md:inline-flex dark:text-blue-500 hover:underline">
                 check it out! <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                  class="hover:fill-current bi bi-star ml-1 text-blue-600 dark:text-blue-500" viewBox="0 0 16 16">
