--- a/src/expressjs/pages/home/index.html
+++ b/src/expressjs/pages/home/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Jake Lee | Resume</title>
+    <title>jakeoliverlee</title>
     <script src="https://cdn.lordicon.com/bhenfmcm.js"></script>
     <script src="https://kit.fontawesome.com/85539b08a7.js" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/@codersrank/skills-chart@x.x.x/codersrank-skills-chart.min.js" defer></script>
@@ -55,7 +55,7 @@
 
     <!-- Nav bar -->
     <div id="navbar" class="py-1 nav-scroller mb-3 mt-1 ml-5 justify-start text-left rounded-full
-     bg-white/90 ring-zinc-900/5 dark:bg-zinc-900 ring-1 r dark:ring-zinc-300/20 text-sm font-medium shadow-md not-fixed">
+     bg-white/90 ring-zinc-900/5 dark:bg-zinc-900 ring-1  dark:ring-zinc-300/20 text-sm font-medium shadow-md not-fixed">
      <nav class="px-3 nav d-flex justify-between">
         <div class="flex-1">
           <a id="work-experience-link" class="font-sans text-gray-900 dark:text-white block px-3 py-2 text-muted
@@ -355,13 +355,13 @@
           PassSave is a password-manager GUI application built using Python's tkinter module.
         </p>
         <div class="flex w-full flex-items-center justify-center min-h-3">
-          <img class="h-10 w-10 inline-block mr-2" src="assets/svgs/icons8-python.svg" alt="Python"> <!-- Move the img tag here -->
+          <img class="h-10 w-10 inline-block mr-2 mb-4" src="assets/svgs/icons8-python.svg" alt="Python">
         </div>
-        <button type="button" class="text-white animate-pulse hover:animate-none bg-gradient-to-r
+        <a href="https://github.com/jakeoliverlee/PassSave" target="_blank" class="text-white animate-pulse hover:animate-none bg-gradient-to-r
         from-blue-500 via-blue-600 to-blue-700 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-blue-300
-         dark:focus:ring-blue-800 shadow-lg shadow-blue-500/50 dark:shadow-lg dark:shadow-blue-800/80 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2" onclick="goToPage()">
+         dark:focus:ring-blue-800 shadow-lg shadow-blue-500/50 dark:shadow-lg dark:shadow-blue-800/80 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mt-2">
           Read more
-        </button>
+        </a>
         </a>
       </div>
     </div>
@@ -614,21 +614,10 @@
     <a href="https://www.linkedin.com/in/jake-lee-4aa088129/" target="_blank" class="flex items-center ml-2 max-w-xl p-6  border border-gray-200 rounded-lg shadow-md  dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700 hover:scale-105 transform ease-in-out duration-300">
       <div class="flex items-center justify-center w-full m-4">
         <svg xmlns="http://www.w3.org/2000/svg" class="toggleIconLight hidden mr-2 h-7 w-7" viewBox="0 0 24 24"><path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"/></svg>
-        <svg xmlns="http://www.w3.org/2000/svg" class="toggleIconDark hidden mr-2 h-7 w-7" viewBox="0 0 24 24" fill="#586069">
-          <path fill="#586069" d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"/>
+        <svg xmlns="http://www.w3.org/2000/svg" class="toggleIconDark mr-2 h-7 w-7" viewBox="0 0 24 24">
+          <path fill="#fff" d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"/>
         </svg>
         <span class="text-zinc-900 dark:text-white select-none font-bold">Connect with me!</span>
-      </div>
-    </a>
-    <a href="#" class="flex items-center ml-2 max-w-xl p-6 border border-gray-200 rounded-lg shadow-md  dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700 hover:scale-105 transform ease-in-out duration-300">
-      <div class="flex items-center justify-center w-full m-4">
-        <svg id="themeToggleDarkEmailIcon" xmlns="http://www.w3.org/2000/svg" class="hidden mr-2 h-7 w-7 text-white fill-current" viewBox="0 0 64 64" id="email">
-          <path fill="#fff" d="M53.42 53.32H10.58a8.51 8.51 0 0 1-8.5-8.5V19.18a8.51 8.51 0 0 1 8.5-8.5h42.84a8.51 8.51 0 0 1 8.5 8.5v25.64a8.51 8.51 0 0 1-8.5 8.5ZM10.58 13.68a5.5 5.5 0 0 0-5.5 5.5v25.64a5.5 5.5 0 0 0 5.5 5.5h42.84a5.5 5.5 0 0 0 5.5-5.5V19.18a5.5 5.5 0 0 0-5.5-5.5Z"></path>
-          <path fill="#fff" d="M32 38.08a8.51 8.51 0 0 1-5.13-1.71L3.52 18.71a1.5 1.5 0 1 1 1.81-2.39L28.68 34a5.55 5.55 0 0 0 6.64 0l23.35-17.68a1.5 1.5 0 1 1 1.81 2.39L37.13 36.37A8.51 8.51 0 0 1 32 38.08Z"></path>
-          <path fill="#fff" d="M4.17 49.14a1.5 1.5 0 0 1-1-2.62l18.4-16.41a1.5 1.5 0 0 1 2 2.24L5.17 48.76a1.46 1.46 0 0 1-1 .38zm55.66 0a1.46 1.46 0 0 1-1-.38l-18.4-16.41a1.5 1.5 0 1 1 2-2.24l18.39 16.41a1.5 1.5 0 0 1-1 2.62z"></path>
-        </svg>
-        <svg id="themeToggleLightEmailIcon" class="hidden mr-2 h-7 w-7" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64" id="email"><path fill="#222" d="M53.42 53.32H10.58a8.51 8.51 0 0 1-8.5-8.5V19.18a8.51 8.51 0 0 1 8.5-8.5h42.84a8.51 8.51 0 0 1 8.5 8.5v25.64a8.51 8.51 0 0 1-8.5 8.5ZM10.58 13.68a5.5 5.5 0 0 0-5.5 5.5v25.64a5.5 5.5 0 0 0 5.5 5.5h42.84a5.5 5.5 0 0 0 5.5-5.5V19.18a5.5 5.5 0 0 0-5.5-5.5Z"></path><path fill="#222" d="M32 38.08a8.51 8.51 0 0 1-5.13-1.71L3.52 18.71a1.5 1.5 0 1 1 1.81-2.39L28.68 34a5.55 5.55 0 0 0 6.64 0l23.35-17.68a1.5 1.5 0 1 1 1.81 2.39L37.13 36.37A8.51 8.51 0 0 1 32 38.08Z"></path><path fill="#222" d="M4.17 49.14a1.5 1.5 0 0 1-1-2.62l18.4-16.41a1.5 1.5 0 0 1 2 2.24L5.17 48.76a1.46 1.46 0 0 1-1 .38zm55.66 0a1.46 1.46 0 0 1-1-.38l-18.4-16.41a1.5 1.5 0 1 1 2-2.24l18.39 16.41a1.5 1.5 0 0 1-1 2.62z"></path></svg>
-        <span class="text-zinc-900 dark:text-white select-none font-bold">Send me an email!</span>
       </div>
     </a>
 </div>
@@ -636,7 +625,7 @@
 
   <div id="bottom-banner" tabindex="-1" class="fixed bottom-0 left-0 z-50 flex justify-between w-full p-4 border-t border-gray-200 bg-gray-50 dark:bg-zinc-900 dark:border-gray-600">
     <div class="flex items-center mx-auto">
-        <p class="flex items-center text-sm font-normal text-gray-500 dark:text-gray-400">
+        <p class="mt-2 flex items-center text-sm font-normal text-gray-500 dark:text-gray-400">
             <span>This website is entirely open source |<a href="https://github.com/jakeoliverlee/resume"
                target="_blank" rel="noopener noreferrer" class="mb-2 flex items-center ml-0 text-sm font-medium
                 text-blue-600 md:ml-1 md:inline-flex dark:text-blue-500 hover:underline">
