add detail to projects section

--- a/src/pages/home/index.html
+++ b/src/pages/home/index.html
@@ -439,7 +439,7 @@
         with a small amount of Javascript. I needed this project to be fully mobile-responsive as well as supporting Dark Mode/Light Mode - TailwindCSS made this very simple to achieve.</li>
       <li class="mb-2">The backend is written in NodeJS, based on the ExpressJS framework, which I used in my developer environment to spin up a locally hosted server.</li>
       <li class="mb-2">Knowing that a single-page app (SPA) like this one didn't require a complex infrastructure, I opted for Google's PaaS service, Firebase.
-        Firebase offers me a comprehensive set of tools, such as Google Analytics, to monitor my site's information.</li>
+        Firebase offers me a comprehensive set of tools, such as Google Analytics, to monitor my site's information and GCP Functions for the backend of the <a href="#work_experience" class="underline">'Download CV'</a>  button.</li>
       <li>For CI/CD, I utilized Github Actions, which executes tests on my code using <a href="https://www.cypress.io/" class="underline text-blue-400">Cypress</a>
         end-to-end testing framework, installs necessary dependencies, and deploys my application to Firebase.</li>
     </ul>
@@ -625,9 +625,9 @@
 
   <div id="bottom-banner" tabindex="-1" class="fixed bottom-0 left-0 z-50 flex justify-between w-full p-4 border-t border-gray-200 bg-gray-50 dark:bg-zinc-900 dark:border-gray-600">
     <div class="flex items-center mx-auto">
-        <p class="mt-2 flex items-center text-sm font-normal text-gray-500 dark:text-gray-400">
+        <p class="mt-1 flex items-center text-sm font-normal text-gray-500 dark:text-gray-400">
             <span>This website is entirely open source |<a href="https://github.com/jakeoliverlee/resume"
-               target="_blank" rel="noopener noreferrer" class="mb-2 flex items-center ml-0 text-sm font-medium
+               target="_blank" rel="noopener noreferrer" class="mb-1 flex items-center ml-0 text-sm font-medium
                 text-blue-600 md:ml-1 md:inline-flex dark:text-blue-500 hover:underline">
                 check it out! <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                  class="hover:fill-current bi bi-star ml-1 text-blue-600 dark:text-blue-500" viewBox="0 0 16 16">
@@ -657,7 +657,7 @@
     </div>
     <hr class="my-6 border-gray-200 sm:mx-auto dark:border-gray-700 lg:my-8" />
     <div class="sm:flex sm:items-center sm:justify-between">
-        <span id="copyright_year" class="text-sm text-gray-500 sm:text-center"><a href="https://flowbite.com/" class="hover:underline">© 2023. Jake Lee</a>.
+        <span id="copyright_year" class="text-sm text-gray-500 sm:text-center"><a class="hover:underline">© 2023. Jake Lee</a>.
         </span>
         <div class="text-sm text-gray-500 sm:text-center dark:text-gray-400"></div>
         <div class="flex mt-4 space-x-6 sm:justify-center sm:mt-0">
