--- a/src/pages/home/index.html
+++ b/src/pages/home/index.html
@@ -1,4 +1,3 @@
-<!-- Hello sneak peeker ;)-->
 <!doctype html>
 <html lang="en" class="dark scroll-smooth">
   <head>
@@ -581,6 +580,8 @@
 </div>
 </article>
 <hr class="my-2 sm:my-2 border-gray-200 sm:mx-auto dark:border-gray-700 lg:my-8 opacity-50" />
+
+<!-- Contact -->
 <div>
       <h1 class="mt-4 text-3xl text-black font-bold dark:text-white">Contact</h1>
       <p class="mt-4 text-black dark:text-white">Feel free to reach out to me! I check email and linkedin most often, but any contact
@@ -622,7 +623,7 @@
     </a>
 </div>
 
-
+ <!-- Banner -->
   <div id="bottom-banner" tabindex="-1" class="fixed bottom-0 left-0 z-50 flex justify-between w-full p-4 border-t border-gray-200 bg-gray-50 dark:bg-zinc-900 dark:border-gray-600">
     <div class="flex items-center mx-auto">
         <p class="mt-1 flex items-center text-sm font-normal text-gray-500 dark:text-gray-400">
