--- a/src/pages/home/index.html
+++ b/src/pages/home/index.html
@@ -342,23 +342,25 @@
 
 
 
-      <div id="PassSave" class="reveal space-y-4">
+      <div id="githubgraphs" class="reveal space-y-4">
         <span
           class="bg-gray-100 text-gray-900 shadow-md text-xs font-medium inline-flex items-center px-2.5 py-0.5 rounded dark:bg-gray-700 dark:text-gray-300">
           Personal
         </span>
         <h3 class="text-2xl font-bold leading-tight text-gray-900 dark:text-white">
-          PassSave
+          Github Graph's
         </h3>
         <p class="text-lg font-normal text-gray-500 dark:text-gray-400">
-          PassSave is a password-manager GUI application built using Python's tkinter module.
+          A REST API built using Flask, for generating custom graphs for GitHub repositories based on commit frequency.
         </p>
         <div class="flex w-full flex-items-center justify-center min-h-3">
-          <img class="h-10 w-10 inline-block mr-2 mb-4" src="assets/svgs/icons8-python.svg" alt="Python">
+          <img class="w-8 h-8 mr-5 inline-block mb-4" src="assets/svgs/icons8-python.svg" alt="Python">
+          <img class="w-8 h-8 mr-5 inline-block mb-4" src="assets/svgs/flask-svgrepo-com.svg" alt="Flask">
+          <img class="w-8 h-8 inline-block mr-2 mb-4" src="assets/svgs/gcp.svg" alt="GCP">
         </div>
-        <a href="https://github.com/jakeoliverlee/PassSave" target="_blank" class="text-white animate-pulse hover:animate-none bg-gradient-to-r
+        <a href="https://github.com/jakeoliverlee/githubgraphs" target="_blank" class="text-white animate-pulse hover:animate-none bg-gradient-to-r
         from-blue-500 via-blue-600 to-blue-700 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-blue-300
-         dark:focus:ring-blue-800 shadow-lg shadow-blue-500/50 dark:shadow-lg dark:shadow-blue-800/80 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mt-2">
+         dark:focus:ring-blue-800 shadow-lg shadow-blue-500/50 dark:shadow-lg dark:shadow-blue-800/80 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mt-6">
           Read more
         </a>
         </a>
@@ -395,7 +397,7 @@
           </a>
             <span
           class="ml-2 bg-gray-100 text-gray-900 text-xs shadow-md font-medium inline-flex items-center px-2.5 py-0.5 rounded dark:bg-gray-700 dark:text-gray-300">
-          v1.0.1
+          v1.0.2
         </span>
           </li>
           <li class="flex items-center" id="tech-logos">
