--- a/src/pages/home/index.html
+++ b/src/pages/home/index.html
@@ -298,23 +298,24 @@
           <p class="text-lg font-normal text-gray-500 dark:text-gray-400">
               Streamline is an Amazon-internal web application built entirely using Python, based on the Streamlit framework.
           </p>
-          <div class="flex w-full flex-items-center justify-center">
-            <img class="w-8 h-8 mr-5 inline-block rounded-full " src="assets/svgs/icons8-python.svg" alt="Python" title="Python">
-            <img class="w-8 h-8 mr-5 inline-block rounded-full " src="assets/svgs/streamlit.svg" alt="Streamlit" title="Streamlit">
-            <img class="w-8 h-8 mr-5 inline-block" src="assets/svgs/typescript-svgrepo-com (1).svg" alt="Typescript" title="Typescript">
-            <img class="w-8 h-8 mr-5 inline-block" src="assets/svgs/aws-icon-services.svg" alt="AWS" title="AWS">
-            <img class="w-8 h-8 mr-1.5 inline-block p-1 rounded-full" src="assets/svgs/terraform-icon-svgrepo-com.svg" alt="Terraform" title="Terraform" style="background-color: white;">
+          <div class="flex w-full flex-items-center justify-center min-h-3">
+            <img class="w-8 h-8 mr-5 inline-block mb-4" src="assets/svgs/icons8-python.svg" alt="Python">
+            <img class="w-8 h-8 mr-5 inline-block mb-4" src="assets/svgs/streamlit.svg" alt="Flask">
+            <img class="w-8 h-8 inline-block mr-5 mb-4" src="assets/svgs/typescript-svgrepo-com (1).svg" alt="GCP">
+            <img class="w-8 h-8 inline-block mr-5 mb-4" src="assets/svgs/aws-icon-services.svg" alt="GCP">
+            <img class="w-8 h-8 inline-block mr-2 mb-4" src="assets/svgs/terraform-icon-svgrepo-com.svg" alt="GCP">
           </div>
-          <a type="button" href="#streamline" class="text-white animate-pulse hover:animate-none bg-gradient-to-r
+          <a href="#streamline" class="text-white animate-pulse hover:animate-none bg-gradient-to-r
           from-blue-500 via-blue-600 to-blue-700 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-blue-300
-           dark:focus:ring-blue-800 shadow-lg shadow-blue-500/50 dark:shadow-lg dark:shadow-blue-800/80 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2">
-              Read more
-        </a>
-      </div>
+           dark:focus:ring-blue-800 shadow-lg shadow-blue-500/50 dark:shadow-lg dark:shadow-blue-800/80 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mt-6">
+            Read more
+          </a>
+          </a>
+        </div>
 
 
 
-      <div id="resume" class="reveal space-y-4">
+      <div id="resume" class="reveal space-y-4 hover:scale-105 transform ease-in-out duration-300">
         <span
           class="bg-gray-100 text-gray-900 shadow-md text-xs font-medium inline-flex items-center px-2.5 py-0.5 rounded dark:bg-gray-700 dark:text-gray-300">
           Personal
@@ -325,20 +326,20 @@
         <p class="text-lg font-normal text-gray-500 dark:text-gray-400">
           This website is my personal resume website, it was built using vanilla Javascript, styled with Tailwind CSS, and with NodeJS as its runtime environment.
         </p>
-        <div class="flex w-full flex-items-center justify-center">
-            <img class="w-8 h-8 mr-5 inline-block p-1 rounded-full" src="assets/svgs/express-svgrepo-com.svg" alt="ExpressJS" style="background-color: white;">
-            <img class="w-8 h-8 mr-5 inline-block rounded-full " src="assets/svgs/node-js-svgrepo-com.svg" alt="NodeJS">
-            <img class="w-8 h-8 mr-5 inline-block rounded-full " src="assets/svgs/tailwind-css-icon.svg" alt="Tailwind">
-            <img class="w-8 h-8 mr-5 inline-block rounded-full " src="assets/svgs/firebase-icon.svg" alt="Firebase">
-            <img class="w-8 h-8 inline-block rounded-full " src="assets/svgs/icons8-mongodb.svg" alt="Mongo">
+        <div class="flex w-full flex-items-center justify-center min-h-3">
+          <img class="w-8 h-8 mr-5 inline-block mb-4" src="assets/svgs/express-svgrepo-com.svg" alt="express">
+          <img class="w-8 h-8 mr-5 inline-block mb-4" src="assets/svgs/node-js-svgrepo-com.svg" alt="nodejs">
+          <img class="w-8 h-8 inline-block mr-5 mb-4" src="assets/svgs/tailwind-css-icon.svg" alt="tailwind">
+          <img class="w-8 h-8 inline-block mr-2 mb-4" src="assets/svgs/firebase-icon.svg" alt="firebase">
+
         </div>
-        <a href="#resume_section" type="button" class="text-white animate-pulse hover:animate-none bg-gradient-to-r
-         from-blue-500 via-blue-600 to-blue-700 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-blue-300
-          dark:focus:ring-blue-800 shadow-lg shadow-blue-500/50 dark:shadow-lg dark:shadow-blue-800/80 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2">
+        <a href="#resume_section" class="text-white animate-pulse hover:animate-none bg-gradient-to-r
+        from-blue-500 via-blue-600 to-blue-700 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-blue-300
+         dark:focus:ring-blue-800 shadow-lg shadow-blue-500/50 dark:shadow-lg dark:shadow-blue-800/80 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mt-6">
           Read more
         </a>
-      </a>
-    </div>
+        </a>
+      </div>
 
 
 
@@ -405,7 +406,6 @@
             <img data-animate data-delay="0.2s" class="w-8 h-8 mr-5 inline-block rounded-full opacity-0" src="assets/svgs/node-js-svgrepo-com.svg" alt="NodeJS">
             <img data-animate data-delay="0.4s" class="w-8 h-8 mr-5 inline-block rounded-full opacity-0" src="assets/svgs/tailwind-css-icon.svg" alt="Tailwind">
             <img data-animate data-delay="0.6s" class="w-8 h-8 mr-5 inline-block rounded-full opacity-0" src="assets/svgs/firebase-icon.svg" alt="Firebase">
-            <img data-animate data-delay="0.8s" class="w-8 h-8 inline-block rounded-full opacity-0" src="assets/svgs/icons8-mongodb.svg" alt="Mongo">
           </li>
       </ul>
   </div>
